Closed Bug 1899841 Opened 5 months ago Closed 5 months ago

DoH regression: Websites load endlessly with network.dns.use_https_rr_as_altsvc=false

Categories

(Core :: Networking: HTTP, defect, P1)

Firefox 128
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed

People

(Reporter: jan, Assigned: kershaw)

References

(Regression)

Details

(Keywords: nightly-community, regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

The regression happened in the last 4 days.
I don't have pip / mozregression at the moment.
Could this have been caused by bug 1898191?

Debian Testing
sudo apt install python3-pip python3-setuptools
pip3 install mozregression --break-system-packages
~/.local/bin/mozregression --good 2024-05-25 --bad 2024-05-29 --pref network.trr.mode:3 network.dns.use_https_rr_as_altsvc:false -a https://servo.org

8:30.52 INFO: Last good revision: a1e4a50f2b357f57b1f4f56b13ed55940fdc1b3a
8:30.52 INFO: First bad revision: fd05c941d725455e15d6374bdea21e0c1bba0bf5
8:30.52 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=a1e4a50f2b357f57b1f4f56b13ed55940fdc1b3a&tochange=fd05c941d725455e15d6374bdea21e0c1bba0bf5

fd05c941d725455e15d6374bdea21e0c1bba0bf5 Kershaw Chang — Bug 1898191 - Remove setWaitForHTTPSSVCRecord, r=necko-reviewers,valentin
cb3ca8188e4382f484890a289d9e3e1889e424b1 Kershaw Chang — Bug 1898191 - Don't wait for HTTPS RR when DoH is disabled, r=necko-reviewers,valentin

Has STR: --- → yes
Regressed by: 1898191

:kershaw, since you are the author of the regressor, bug 1898191, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(kershaw)
Assignee: nobody → kershaw
Severity: -- → S3
Flags: needinfo?(kershaw)
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ad65b2ccbbe0 Disallow HTTPS RR when network.dns.use_https_rr_as_altsvc is false, r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Component: Networking: DNS → Networking: HTTP
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: