Bug 1899841 - Disallow HTTPS RR when network.dns.use_https_rr_as_altsvc is false, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D212238